<resources>
    <string name="app_name">Project</string>

    <!--  activity_main.xml  -->
    <string name="mainTitle">개리커쳐</string>

    <!--  fragment_gallery.xml  -->
    <string name="btnGallery">갤러리</string>
    <string name="btnCamera">카메라</string>
    <string name="tvGallery">변환할 사진을 올려주세요.</string>
    <string name="btnChange">변환</string>

    <!--  fragment_mypage.xml  -->
    <string name="tvLevel">회원등급</string>
    <string name="tvPoint">포인트</string>
    <string name="tvCart">장바구니</string>
    <string name="tvPurchaseHistory">구매내역</string>
    <string name="tvPurchaseAll">전체</string>
    <string name="tvPurchaseDelivering">배송중</string>
    <string name="tvPurchaseComplete">배송 완료</string>
    <string name="tvMyGaericapture">보유 개리커쳐</string>

    <!--  activity_purchase_ditail.xml  -->
    <string name="btnPurchase">구매하기</string>
    <string name="btnCart">장바구니 담기</string>

    <!--  activity_begin.xml  -->
    <string name="edId">아이디</string>
    <string name="edPw">비밀번호</string>
    <string name="edNick">닉네임</string>
    <string name="btnLogin">로그인</string>
    <string name="btnSignUp">회원가입</string>
    <string name="btnBack">뒤로가기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  activity_cart  -->
    <string name="tvMinus">-</string>
    <string name="tvPlus">+</string>
    <string name="btnX">x</string>

    <!-- activity_purchase -->
    <string name="tvPurchase1">현금 환불의 경우, 예금 정보가 일치해야 환불 처리가 가능합니다. 은행명, 계좌번호, 예금주명을 정확하게 기재부탁드립니다.</string>
    <string name="tvPurchase2">환불받으신 날짜 기준으로 3~5일(주말 제외) 후 결제대행사에서 직접 고객님의 계좌로 환불 처리됩니다.</string>

</resources>