<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Home">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imgGallery"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/tvGallery"
            app:layout_constraintStart_toStartOf="@+id/tvGallery"
            app:layout_constraintTop_toBottomOf="@+id/tvGallery"
            app:srcCompat="@drawable/dog" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="@string/btnGallery"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgGallery" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="@string/btnCamera"
            android:textColor="@color/orange"

            app:layout_constraintBottom_toBottomOf="@+id/btnGallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnGallery"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/tvGallery"
            android:textColor="@color/orange"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="@string/btnChange"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnBack" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="다른 사진 고르기"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgGallery" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4px"
            android:background="#11808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="52dp"-->
        <!--            android:layout_marginTop="136dp"-->
        <!--            android:src="@drawable/tree2"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/toolbar" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>