<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgCartThumb"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/tvItemName"
        android:ellipsize="end"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/twayair"
        android:text="아이템 이름"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/imgCartThumb"
        app:layout_constraintTop_toTopOf="@+id/imgCartThumb" />

    <TextView
        android:id="@+id/tvItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/twayair"
        android:text="5,000원"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvItemCnt"
        app:layout_constraintEnd_toEndOf="@+id/btnCartDelete" />

    <TextView
        android:id="@+id/tvItemCnt"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/twayair"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgCartThumb"
        app:layout_constraintStart_toEndOf="@+id/btnCartMinus" />

    <TextView
        android:id="@+id/btnCartPlus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/btn1"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/tvPlus"
        android:textColor="@color/orange"
        android:textSize="12dp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvItemCnt"
        app:layout_constraintStart_toEndOf="@+id/tvItemCnt"
        app:layout_constraintTop_toTopOf="@+id/tvItemCnt" />

    <TextView
        android:id="@+id/btnCartDelete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btnX"
        android:textColor="@color/orange"
        android:textSize="15dp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgCartThumb" />

    <TextView
        android:id="@+id/btnCartMinus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/btn1"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/tvMinus"
        android:textColor="@color/orange"
        android:textSize="12dp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvItemCnt"
        app:layout_constraintStart_toStartOf="@+id/tvItemName"
        app:layout_constraintTop_toTopOf="@+id/tvItemCnt" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="#59AAAAAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>